# for_self_study

./: .gitignore  Cargo.toml  build.sh  output.txt  readme.md
bayes_packages/: Cargo.toml  readme.md
bayes_packages/src/: check.rs  main.rs  simple_linear_regiression.rs  simple_linear_regiression_filein.rs  simple_mean_bulk.rs  simple_mean_online.rs  simple_poisson.rs
bayes_packages/src/modules/: mcmc.rs  mcmc_distributions.rs  mcmc_visualizer.rs  mod.rs  utils.rs
bayes_study/: Cargo.toml
bayes_study/src/modules/: mod.rs
bays_packages/: Cargo.toml
bays_packages/src/: main.rs  simple_mean_bulk.rs  simple_mean_online.rs  simple_poisson.rs
bays_packages/src/modules/: mcmc.rs  mcmc_distributions.rs  mcmc_tools.rs  mcmc_visualizer.rs  mod.rs
bays_study/src/examples/: metropolis_hastings_examples.rs  mod.rs
bays_study/src/modules/: simple_bays.rs  utils.rs
decision_tree/: Cargo.toml
decision_tree/src/: main.rs
dnn/: Cargo.toml
dnn/src/: main.rs
logs/run_business_example/run_business_example/: output.txt
logs/run_business_example/run_simple_changepoint/: log.txt
playground/: Cargo.toml
src/: main.rs  main_bays.rs  rust_playground.rs  trial_dtree.rs  trial_self_attention.rs  uk_coal_chagepoint.rs
src/examples/: metropolis_hastings_examples.rs  readme.md
src/modules/: metropolis_hastings.rs  utils.rs
transformer/: Cargo.toml
transformer/src/: main.rs
visualize/: Cargo.toml
visualize/src/: main.rs
