[package]
name = "bays_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
ndarray-rand = "0.14"
statrs = "0.15.0"

[profile.dev]
# warnings = "off"

[[bin]]
name = "bays"
path = "src/main_bays.rs"

[[bin]]
name = "trial_dtree"
path = "src/trial_dtree.rs"

[[bin]]
name = "trial_self_attention"
path = "src/trial_self_attention.rs"

[[bin]]
name = "uk_coal_chagepoint"
path = "src/uk_coal_chagepoint.rs"

